# facedb

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: indexing.rs  main.rs  scraper.rs  server.rs
