[package]
name = "facedb"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
image = "0.25"
reqwest = "0.12"
tokio = { version = "1.47.1", features = ["full"] }
ort = "=2.0.0-rc.10"
log = "0.4.27"
env_logger = "0.11.8"
ndarray = "0.16.1"
dotenv = "0.15.0"
meilisearch-sdk = "0.29.1"
serde = "1.0.219"
chrono = "0.4.41"
rand = "0.9.2"
chrono-tz = "0.10.4"
