[package]
name = "facedb"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
image = "0.25"
reqwest = "0.12"
tokio = { version = "1.47.1", features = ["full"] }
ort = "=2.0.0-rc.10"
log = "0.4"
env_logger = "0.11"
ndarray = "0.16"
dotenv = "0.15"
meilisearch-sdk = "0.29.1"
serde = "1.0"
chrono = "0.4"
rand = "0.9"
chrono-tz = "0.10"
actix-web = "4"
actix-multipart = "0.7.2"
